<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum</string>

    <!-- Main -->
    <string name="action_refresh">Refresh</string>
    <string name="weatherUnavailable">Weather Temporarily Unavailable</string>
    <string name="contentDescription_weatherIcon">Weather condition icon.</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Detail -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="menu_item_share_title">Share</string>

    <!-- Wind speed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">@string/action_settings</string>

    <string name="action_map">Map</string>

    <!-- Preferences -->
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">34786</string>

    <string name="pref_units_title">Temperature Units</string>
    <string name="pref_units_option0_entry">Metric</string>
    <string name="pref_units_option1_entry">Imperial</string>

    <string-array name="units_entries">
        <item>@string/pref_units_option0_entry</item>
        <item>@string/pref_units_option1_entry</item>
    </string-array>

    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_option0_value" translatable="false">metric</string>
    <string name="pref_units_option1_value" translatable="false">imperial</string>

    <string-array name="units_values">
        <item>@string/pref_units_option0_value</item>
        <item>@string/pref_units_option1_value</item>
    </string-array>

    <string name="pref_units_default" translatable="false">@string/pref_units_option0_value</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="content_authority">com.es0329.sunshine</string>
    <string name="sync_account_type">sunshine.es0329.com</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <string name="pref_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_notifications_label">Weather Notifications</string>
    <string name="pref_notifications_true">Enabled</string>
    <string name="pref_notifications_false">Not enabled</string>
    <string name="pref_notifications_default" translatable="false">true</string>
</resources>
