<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="number"
        android:key="@string/pref_location_key"
        android:maxLength="5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_location_title" />

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/units_entries"
        android:entryValues="@array/units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_notifications_default"
        android:key="@string/pref_notifications_key"
        android:summaryOff="@string/pref_notifications_false"
        android:summaryOn="@string/pref_notifications_true"
        android:title="@string/pref_notifications_label" />

</PreferenceScreen>